2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Make usermod -o and -u work independently of the
	argument order.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Validate that two of the -L, -p, and -U options
	are not used at the same time after the parsing of options. -U
	used to be allowed after -p or -L, but not before.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Make usermod -d and -m work independently of the
	argument order. Thanks to Justin Pryzby <jpryzby+d@quoininc.com>
	for the patch. This fixes Debian's bug #451518.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, lib/nscd.c: Execute nscd -i instead of using the private
	glibc socket to flush the nscd tables. This comes from the RedHat
	patch shadow-4.0.16-nscd.c.
	* lib/commonio.c: Forbid inheritance of the passwd and group files
	to the spawed processes (like nscd). This comes from the RedHat
	patch shadow-4.0.17-notInheritFd.patch.
	* lib/nscd.h: Update header.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c (fail_exit): Add static variables pw_locked,
	spw_locked, gr_locked, and sgr_locked to indicate which files must
	be unlocked.
	* src/usermod.c (open_files, close_files): Open and close the
	group files as well as the passwd files. This permit to check if
	the group files modification are allowed before writing the passwd
	files.
	* src/usermod.c (grp_update, update_gshadow, update_group): Do not
	return a status code, but call fail_exit() in case of error. The
	group files are no more opened and closed in update_gshadow() and
	update_group().
	* src/usermod.c (main): move the call to grp_update between
	open_files and close_files.
	* src/usermod.c: Differentiate failure to add a group entry and
	failure to add a shadow group entry.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>
